[package]
name = "alloy-merkle-tree"
description = "Minimal Merkle Tree implementation"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/rkdud007/alloy-merkle-tree"
keywords = ["merkle", "tree", "merkle-tree"]
categories = [
    "cryptography",
    "data-structures",
    "cryptography::cryptocurrencies",
]
exclude = [".github"]
version = "0.7.0"
edition = "2021"

[dependencies]
alloy = { version = "0.1.1", features = ["dyn-abi"] }
hashbrown = "0.14.3"
anyhow = "1.0"
