[package]
name = "alloy-merkle-tree"
description = "Minimal Merkle Tree implementation"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/rkdud007/alloy-merkle-tree"
keywords = ["merkle", "tree", "merkle-tree"]
categories = [
    "cryptography",
    "data-structures",
    "cryptography::cryptocurrencies",
]
exclude = [".github"]
version = "0.7.3"
edition = "2021"

[dependencies]
alloy-primitives = "1.2"
alloy-dyn-abi = "1.2"
hashbrown = "0.15.3"
anyhow = "1.0"
